Fix carousel item layout issue
- Change carousel-item flex basis from 90px to 10px for proper sizing
- Add margin-right: 0px to override any negative margin issues
- This fixes the carousel layout problem that was causing visual mess

Resolves the -580px margin-right issue that was breaking the payment method carousel display.

--- a/WebCashier/wwwroot/css/site.css
+++ b/WebCashier/wwwroot/css/site.css
@@ -142,10 +142,11 @@ body {
 }
 
 .carousel-item {
-  flex: 0 0 90px;
+  flex: 0 0 10px;
   display: flex;
   justify-content: center;
   flex-shrink: 0;
+  margin-right: 0px;
 }
 
 /* Payment forms section */
